--- a/_posts/2020-05-19-css-5-float1.markdown
+++ b/_posts/2020-05-19-css-5-float1.markdown
@@ -12,21 +12,19 @@ categories: CSS
 - 적용할 요소의 position 값이 static이나 relative인 경우에만 사용 가능. (absolute 요소는 웹페이지의 flow에서 제거된 요소라서 다른 요소와 상호작용하는 float을 적용시킬 수 없음)
 - 적용할 요소의 display 값이 block 요소인 경우 float을 적용하면 inline이나 inline-block처럼 행동함. 즉, width가 컨텐츠 너비로 자동 조절됨 -> 컨텐츠가 없는 블록 요소의 경우 width 설정을 안하면 float적용했을 때 안보임.
 - float 적용된 요소와 붙어있는 다른 요소 사이에 여백을 주려면 float 적용된 요소의 마진 값 조절.  
-- 이미지를 텍스트 사이에 배치할 때 주로 사용. 레이아웃 짤 때도 사용함.
+- 이미지를 텍스트 사이에 배치하기 위해 나온 기능이고 그럴 때 주로 사용
+- 레이아웃 짤 때도 사용함 (BUT IE9 미만 브라우저도 서포트해야 하는 것 아니면 대체로 flexbox 사용)
 - 값: left, right, none(디폴트), inline-start, inline-end
 
 <br/>
 
-## 1. left / right
+## 1. float: left / right
 - 부모의 가장 왼쪽 / 가장 오른쪽으로 붙임. 
 
 {% highlight html %}
 <head>
 <style>
-.parent {
-    border: solid;
-}
-.child {
+.box {
         background-color: yellow;
         width: 100px;
         height: 65px;
@@ -36,40 +34,38 @@ categories: CSS
 </head>
 <body>
 
-<div class="parent">
-<div class="child"></div>
+<div class="box"></div>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
 eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
 ex ea commodo consequat.Duis aute irure dolor in reprehenderit in voluptate 
 velit esse cillum dolore eu fugiat nulla pariatur.</p>
-</div>
 </body>
 {% endhighlight %}
 
 - float 들어간 요소에 마진 값 없는 경우:
 
-<div style="border: solid;"><div style="background-color: yellow; width: 100px; height: 45px; float: left;"></div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+<div style="background-color: yellow; width: 100px; height: 45px; float: left;"></div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 <br/>
 - float 들어간 요소에 마진 값 설정한 경우 :
  
-<div style="border: solid;"><div style="background-color: yellow; width: 100px; height: 45px; float: left; margin: 10px;"></div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+<div style="background-color: yellow; width: 100px; height: 45px; float: left; margin: 10px;"></div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 <br/>
 - 텍스트 요소에만 마진 값 설정한 경우 :
  
-<div style="border: solid;"><div style="background-color: yellow; width: 100px; height: 45px; float: left;"></div><p style="margin: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+<div style="background-color: yellow; width: 100px; height: 45px; float: left;"></div><p style="margin: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 <br/>
 - float 들어간 요소가 absolute인 경우(float 작동 안됨) :
  
-<div style="border: solid;"><div style="background-color: yellow; width: 100px; height: 45px; position: absolute; float: left;"></div><p style="margin: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+<div style="background-color: yellow; width: 100px; height: 45px; position: absolute; float: left;"></div><p style="margin: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 <br/>
 - float 들어간 요소의 width를 설정하지 않은 경우(컨텐츠가 없는 div이라서 안보임) :
  
-<div style="border: solid;"><div style="background-color: yellow; float: left;"></div><p style="margin: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p></div>
+<div style="background-color: yellow; float: left;"></div><p style="margin: 10px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
 <br/>
 
@@ -79,7 +75,8 @@ velit esse cillum dolore eu fugiat nulla pariatur.</p>
 <head>
 <style>
 .parent {
-    border: solid; height: 45px;
+    border: solid; 
+    overflow: auto;
 }
 
 .float1{
@@ -115,13 +112,13 @@ velit esse cillum dolore eu fugiat nulla pariatur.</p>
 </body>
 {% endhighlight %}
 
-<div style="border: solid; height: 45px;"><div style="background-color: yellow; width: 100px; height: 45px; float: left;">float 1</div><div style="background-color: teal; width: 100px; height: 45px; float: left;">float 2</div><div style="background-color: green; width: 100px; height: 45px; float: right;">float 3</div></div>
+<div style="border: solid; overflow: auto;"><div style="background-color: yellow; width: 100px; height: 45px; float: left;">float 1</div><div style="background-color: teal; width: 100px; height: 45px; float: left;">float 2</div><div style="background-color: green; width: 100px; height: 45px; float: right;">float 3</div></div>
 
 
 <br/><br/>
 
 참조 :<br/>
-[MDN web docs](https://developer.mozilla.org/en-US/docs/Web/CSS/float)<br/>
+[MDN web docs - float](https://developer.mozilla.org/en-US/docs/Web/CSS/float)<br/>
 [codecademy.com - Learn CSS(3. CSS Display and Positioning)](https://www.codecademy.com/learn/learn-css)<br/>
 [생활코딩 CSS 수업 - float](https://opentutorials.org/course/2418/13527)<br/>
 [ofcourse css 코스 - float 속성](https://ofcourse.kr/css-course/float-%EC%86%8D%EC%84%B1)<br/>
