--- a/_posts/2020-05-21-css-7-grid.markdown
+++ b/_posts/2020-05-21-css-7-grid.markdown
@@ -6,8 +6,8 @@ categories: CSS
 ---
 
 ## 0-0. Grid란?
-- Grid Layout. floats이나 position보다 쉽게, Flex box보다 효과적으로 복잡한 레이아웃 구현할 수 있음. 
-- Flex box는 1차원적 레이아웃, Grid는 2차원적 레이아웃(열, 행 존재)에 적합. 
+- Grid Layout. floats이나 position보다 쉽게, Flex box보다 효과적으로 복잡한 레이아웃 구현할 수 있음.
+- Flex box는 1차원적 레이아웃, Grid는 2차원적 레이아웃(열, 행 존재)에 적합.
 - 부모-자식 필요 : 부모의 display 값을 grid로 선언하면 부모는 grid container, 자식은 grid item이 됨.
 - Grid container에 사용하는 프로퍼티, grid item에 사용하는 프로퍼티 따로 있음.
 
@@ -18,13 +18,13 @@ categories: CSS
 ![grid-all](https://eungang3.github.io/sue-is-programming/assets/grid-all.jpg)
 
 ### 1) Grid Track
-- grid의 행/열. 
+- grid의 행/열.
 
 ### 2) Cell
-- Grid item이 차지할 수 있는 최소 단위 영역. 
+- Grid item이 차지할 수 있는 최소 단위 영역.
 
 ### 3) Grid Lines
-- grid에서 셀을 나누는 선. 
+- grid에서 셀을 나누는 선.
 
 ### 4) Grid Number
 - Grid line의 번호.
@@ -55,7 +55,7 @@ categories: CSS
   display: grid;
   /* 3열 2행의 그리드 생성 */
   /* 첫 열 너비 50px로 고정, 나머지 열은 전체 너비에서 50px 뺀 값을 1:1로 나눠서 배분 */
-  grid-template-columns: 50px 1fr 1fr; 
+  grid-template-columns: 50px 1fr 1fr;
   /* 첫 행 높이 70px로 고정, 나머지 행은 전체 너비에서 70px 뺀 값 모두 배분 */
   grid-template-rows: 70px 1fr;
   padding: 10px;
@@ -75,7 +75,7 @@ categories: CSS
   <div class="grid-item">3</div>  
   <div class="grid-item">4</div>
   <div class="grid-item">5</div>
-  <div class="grid-item">6</div>   
+  <div class="grid-item">6</div>  
 </div>
 </body>
 {% endhighlight %}
@@ -83,7 +83,7 @@ categories: CSS
 <div style="display: grid; grid-template-columns: 50px 1fr 1fr; grid-template-rows: 70px 1fr;">
   <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">1</div>
   <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">2</div>
-  <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">3</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">4</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">5</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">6</div>   
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">3</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">4</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">5</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">6</div>  
 </div>
 
 <br/>
@@ -111,8 +111,8 @@ grid-template-rows: repeat(2, 200px 1fr)
   display: grid;
   /* 3열 2행 그리드 생성 */
   grid-template-columns: 1fr 1fr 1fr;
-  /* 1행은 item 사이즈가 아무리 작아도 높이 최소 50px 유지, 
-  item 사이즈가 50px보다 크면 따라서 높아짐, 
+  /* 1행은 item 사이즈가 아무리 작아도 높이 최소 50px 유지,
+  item 사이즈가 50px보다 크면 따라서 높아짐,
   2행은 전체 높이에서 1행 높이 뺀 나머지 값 할당  */
   grid-template-rows: minmax(50px, auto) 1fr;
   padding: 10px;
@@ -132,7 +132,7 @@ grid-template-rows: repeat(2, 200px 1fr)
   <div class="grid-item">3</div>  
   <div class="grid-item">4</div>
   <div class="grid-item">5</div>
-  <div class="grid-item">6</div>   
+  <div class="grid-item">6</div>  
 </div>
 </body>
 {% endhighlight %}
@@ -140,7 +140,7 @@ grid-template-rows: repeat(2, 200px 1fr)
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: minmax(50px, auto) 1fr;">
   <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">1</div>
   <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">2</div>
-  <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">3</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">4</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">5</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">6</div>   
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">3</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">4</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">5</div><div style="background-color: yellow;border: 1px solid;font-size: 15px;text-align: center;">6</div>  
 </div>
 
 <br/>
@@ -155,7 +155,6 @@ grid-template-rows: repeat(2, 200px 1fr)
 <style>
 .grid-container {
   display: grid;
-  /* 셀 크기를 %로 지정, 한 row당 셀 4개씩 만듦 */
   grid-template-columns: auto-fill, minmax(60px, 1fr);
 }
 
@@ -175,7 +174,7 @@ grid-template-rows: repeat(2, 200px 1fr)
   <div class="grid-item">3</div>  
   <div class="grid-item">4</div>
   <div class="grid-item">5</div>
-  <div class="grid-item">6</div>   
+  <div class="grid-item">6</div>  
 </div>
 </body>
 {% endhighlight %}
@@ -209,6 +208,7 @@ grid-template-rows: repeat(2, 200px 1fr)
 - 빈 칸은 none 또는 .로 표시
 
 {% highlight html %}
+<head>
 <style>
 .grid-container {
   display: grid;
@@ -235,8 +235,8 @@ grid-template-rows: repeat(2, 200px 1fr)
   background-color: blue;
 }
 </style>
-
 </head>
+
 <body>
 <div class="grid-container">
   <div class="item1">header</div>
@@ -252,12 +252,353 @@ grid-template-rows: repeat(2, 200px 1fr)
   <div style="grid-area: ad;background-color: blue;">ad</div>  
 </div>
 
+<br/>
+
 ### 4) grid-template
 - grid-template-rows, grid-template-columns, grid-template-areas를 한 번에 쓸 수 있는 프로퍼티
 
+#### ex 1) grid-template: grid-template-rows값 / grid-template-columns값
+{% highlight html %}
+<head>
+<style>
+.grid-container {
+  display: grid;
+  /* 2열 2행 그리드 생성 */
+  grid-template: 1fr 1fr / 50px 1fr;
+}
+
+.item1{
+  background-color: teal;
+}
+
+.item2{
+  background-color: yellow;
+}
+
+.item3{
+  background-color: yellow;
+}
+
+.item4{
+  background-color: blue;
+}
+</style>
+</head>
+
+<body>
+<div class="grid-container">
+  <div class="item1">1</div>
+  <div class="item2">2</div>
+  <div class="item3">3</div>
+  <div class="item4">4</div>
+</div>
+</body>
+{% endhighlight %}
+
+<div style="display: grid;grid-template: 1fr 1fr / 50px 1fr;"><div style="background-color: teal;">1</div><div style="background-color: yellow;">2</div><div style="background-color: yellow;">3</div><div style="background-color: blue;">4</div></div>
+<br/>
+
+#### ex 2) grid-template: grid-template-areas 값
+{% highlight html %}
+<head>
+<style>
+.grid-container {
+  display: grid;
+  grid-template: "header header"
+                 "body ad"
+                 "footer footer"
+}
+
+.item1{
+  background-color: teal;
+  grid-area: header;
+}
+
+.item2{
+  background-color: yellow;
+  grid-area: body;
+}
+
+.item3{
+  background-color: green;
+  grid-area: ad;
+}
+
+.item4{
+  background-color: blue;
+  grid-area: footer;
+}
+</style>
+</head>
+
+<body>
+<div class="grid-container">
+  <div class="item1">header</div>
+  <div class="item2">body</div>
+  <div class="item3">ad</div>
+  <div class="item4">footer</div>
+</div>
+</body>
+{% endhighlight %}
+
+<div style="display: grid;grid-template: 'header header''body ad''footer footer'">
+  <div style="background-color: teal;grid-area: header;">header</div>
+  <div style="background-color: yellow;grid-area: body;">body</div>
+  <div style="background-color: green;grid-area: ad;">ad</div>
+  <div style="background-color: blue;grid-area: footer;">footer</div>
+</div>
+
+<br/>
+
+#### ex 3) ex1 + ex2 같이 사용
+{% highlight html %}
+<head>
+<style>
+.grid-container {
+  display: grid;
+/* 2열 3행 그리드 생성 동시에 grid-areas 지정 */
+  grid-template: 'header header' 80px
+                 'body ad' 50px
+                 'footer footer' 100px
+                 / 1fr 100px;
+}
+
+.item1{
+  background-color: teal;
+  grid-area: header;
+}
+
+.item2{
+  background-color: yellow;
+  grid-area: body;
+}
+
+.item3{
+  background-color: green;
+  grid-area: ad;
+}
+
+.item4{
+  background-color: blue;
+  grid-area: footer;
+}
+</style>
+</head>
+
+<body>
+<div class="grid-container">
+  <div class="item1">header</div>
+  <div class="item2">body</div>
+  <div class="item3">ad</div>
+  <div class="item4">footer</div>
+</div>
+</body>
+{% endhighlight %}
+
+<div style="display: grid;grid-template: 'header header' 80px'body ad' 50px 'footer footer' 100px / 1fr 100px;">
+  <div style="background-color: teal;grid-area: header;">header</div>
+  <div style="background-color: yellow;grid-area: body;">body</div>
+  <div style="background-color: green;grid-area: ad;">ad</div>
+  <div style="background-color: blue;grid-area: footer;">footer</div>
+</div>
+
+<br/>
+
+### 5) row-gap / column-gap
+- row 사이 간격 / column 사이 간격 설정
+{% highlight html %}
+<head>
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 2fr 1fr;
+  grid-row-gap: 10px; /* 행 사이 간격 */
+  grid-column-gap: 20px; /* 열 사이 간격 */
+}
+.grid-item {
+  background-color: yellow;
+  border: 1px solid;
+  font-size: 15px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>  
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>  
+</div>
+</body>
+{% endhighlight %}
+
+<div style="display: grid;grid-template-columns: 1fr 1fr 1fr;grid-template-rows: 2fr 1fr;grid-row-gap: 10px;grid-column-gap: 20px;">
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;
+  text-align: center;">1</div>
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;
+  text-align: center;">2</div>
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;
+  text-align: center;">3</div>  
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;
+  text-align: center;">4</div>
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;
+  text-align: center;">5</div>
+  <div style="background-color: yellow;border: 1px solid;font-size: 15px;
+  text-align: center;">6</div>  
+</div>
+
+<br/>
+
+### 6) Gap
+- row-gap / column-gap 동시에 설정하는 프로퍼티
+- gap : row-gap 값 / column-gap 값
+- 값 하나만 지정하면 row-gap, column-gap 동시 적용
+
+{% highlight css %}
+.container {
+   display: grid;
+   gap: 20px / 40px /* row-gap은 20px, column-gap은 40px */
+}
+{% endhighlight %}
+
+{% highlight css %}
+.container {
+   display: grid;
+   gap: 20px /* row-gap, column-gap 모두 20px */
+}
+{% endhighlight %}
+
+{% highlight css %}
+.container {
+   display: grid;
+   gap: 0 20px /* column-gap만 20px */
+}
+{% endhighlight %}
+
+<br/>
+
+### 7) grid-auto-rows / grid-auto-columns
+- row, column 개수를 미리 알 수 없을 때 사용.
+- 암시적으로 행 / 열 크기 설정하는 프로퍼티.
+
+{% highlight html %}
+<style>
+.container {
+  width: 200px;
+  height: 200px;
+  display: grid;
+  grid-template: 50px 50px / 70px 70px;
+  grid-auto-rows: 50px; /* 암시적 행의 크기 */
+}
+
+.item1, .item2, .item3, .item4 {
+  border: solid;
+}
+
+.item3 {
+  grid-row: 3 / 4;
+}
+</style>
+</head>
+
+<body>
+<div class="container">
+  <div class="item1">1</div>
+  <div class="item2">2</div>
+  <div class="item3">3</div>
+</div>
+</body>
+{% endhighlight %}
+
+<div style="width: 200px;height: 200px;display: grid; grid-template: 50px 50px / 70px 70px;grid-auto-rows: 50px;"><div style="border: solid;">1</div><div style="border: solid;">2</div><div style="border: solid;grid-row: 3 / 4;">3</div><div style="border: solid;grid-row: 5 / 6;">4</div></div><br/>
+
+<br/>
+
+### 8) grid-auto-flow
+- 아이템을 자동 배치해야 할 때 어떤 방식으로 할 지 설정.
+- 값 : row(기본값), column, row dense, column dense
+
+{% highlight html %}
+<head>
+<style>
+.grid-container {
+  display: grid;
+  grid-template : repeat(4,50px) / repeat(3, 50px);
+  grid-auto-flow : row; /* row dense 등으로 변경 가능 */
+
+}
+
+.grid-container > div {
+  border: solid;
+  background-color : yellow;
+}
+
+.item1{
+ grid-column: 2 / span 2;
+}
+
+.item2 {
+  grid-column: span 3;
+}
+
+.item3 {
+  grid-column: span 2;
+}
+
+</style>
+</head>
+
+<body>
+<div class="grid-container">
+  <div class="item1">1</div>
+  <div class="item2">2</div>
+  <div class="item3">3</div>  
+  <div class="item4">4</div>
+  <div class="item5">5</div>
+</div>
+</body>
+{% endhighlight %}
+
+#### ex 1) row - row를 따라 순서대로 배치
+
+<div style="display: grid;grid-template : repeat(4,50px) / repeat(3, 50px);grid-auto-flow : row;">
+  <div style="border: solid;background-color : yellow;grid-column: 2 / span 2;">1</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 3;">2</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 2;">3</div>   <div style="border: solid;background-color : yellow;">4</div>
+  <div style="border: solid;background-color : yellow;">5</div></div>
+
+<br/>
+
+#### ex 2) row dense - row를 따라 남는 공간 채우면서 배치
+<div style="display: grid;grid-template : repeat(4,50px) / repeat(3, 50px);grid-auto-flow : row dense;">
+  <div style="border: solid;background-color : yellow;grid-column: 2 / span 2;">1</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 3;">2</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 2;">3</div>   <div style="border: solid;background-color : yellow;">4</div>
+  <div style="border: solid;background-color : yellow;">5</div></div>
+<br/>
+
+#### ex 3) column - column을 따라 순서대로 배치
+<div style="display: grid;grid-template : repeat(4,50px) / repeat(3, 50px);grid-auto-flow : column;">
+  <div style="border: solid;background-color : yellow;grid-column: 2 / span 2;">1</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 3;">2</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 2;">3</div>   <div style="border: solid;background-color : yellow;">4</div>
+  <div style="border: solid;background-color : yellow;">5</div></div>
+
+<br/>
+
+#### ex 4) column dense - column을 따라 남는 공간 채우면서 배치
+<div style="display: grid;grid-template : repeat(4,50px) / repeat(3, 50px);grid-auto-flow : column dense;">
+  <div style="border: solid;background-color : yellow;grid-column: 2 / span 2;">1</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 3;">2</div>
+  <div style="border: solid;background-color : yellow;grid-column: span 2;">3</div>   <div style="border: solid;background-color : yellow;">4</div>
+  <div style="border: solid;background-color : yellow;">5</div></div>
+<br/>
 
 <br/><br/>
-
 참조 :<br/>
 [생활코딩 Web2 - css, 그리드](https://opentutorials.org/course/3086/18322)<br/>
 [MDN web docs - CSS Grid Layout](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout)<br/>
@@ -266,4 +607,3 @@ grid-template-rows: repeat(2, 200px 1fr)
 [Heropy Tech - CSS Grid 완벽 가이드](https://heropy.blog/2019/08/17/css-grid/)<br/>
 [How to Efficiently Master the CSS Grid — in a Jiffy](https://medium.com/flexbox-and-grids/how-to-efficiently-master-the-css-grid-in-a-jiffy-585d0c213577)<br/>
 [Codecademy - Learn CSS, 6. Grid](https://www.codecademy.com/learn/learn-css)<br/>
-[1분 코딩 - 이번에야말로 CSS Grid를 익혀보자](https://studiomeal.com/archives/533)
