--- a/_posts/2020-06-06-js-6-objects.markdown
+++ b/_posts/2020-06-06-js-6-objects.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Javascript Objects & Functions"
+title:  "Javascript Objects"
 date:   2020-06-13 01:40:27 +0900
 categories: Javascript
 ---
@@ -204,87 +204,6 @@ var jane = Object.create(personProto, {
     job: { value: 'designer' }
 });
 {% endhighlight %}
-
-<br/>
-
-## 2. First class function
-- js는 first-class function 지원(=function을 다른 variable과 똑같이 취급함)
-    + function은 object type의 instance(=function도 object). 
-    + variable에 저장 가능
-    + 다른 function의 인자로 넣을 수 있음.
-    + function이 function을 return할 수도 있음.
-
-<br/>
-
-### 1) function을 다른 function의 인자로 넣기
-- callback function : 다른 function의 인자로 들어간 function.
-{% highlight javascript %}
-//참조 1에서 발췌한 코드
-
-var years = [1990, 1965, 1937, 2005, 1998];
-
-function arrayCalc(arr, fn){
-    var arrRes = [];
-    for (var i = 0; i < arr.length; i++>){
-        arrRes.push(fn(arr[i]));
-    }
-    return arrRes;
-}
-
-function calculateAge(el) {
-    return 2016 - el;
-}
-
-{% endhighlight %}
-
-<br/>
-
-### 2) function에서 function을 return하기
-{% highlight javascript %}
-function speak(animal){
-    if (animal === 'dog'){
-        return function(name){
-            console.log(name + ' is barking');
-        }
-    } else {
-        return function(name){
-            console.log(name + ' is meowing');
-        }
-    }
-}
-
-var dogSpeak= speak('dog');
-dogSpeak('Snoopy'); //snoopy is barking
-
-speak('cat')('Garfield'); //Garfield is meowing
-{% endhighlight %}
-
-<br/>
-
-### 3) Immediately Invoked Function Expressions(IIFE)
-- 즉시실행함수. 정의하자마자 호출되는 function. 
-
-- Self-Executing Anonymous Function이라고도 함. 
-
-- function 바깥에서 function 내부에 접근할 수 없게 해서 data privacy 지키려고 사용.
-
-- 한 번만 쓸 목적으로 만드는 Anonymous function 
-
-- function declaration의 단점 보완
-
-- function declaration의 단점  
-    + global scope 오염 -> name collision 발생 가능
-    + 단 한 번만 실행할 목적으로 쓰기 곤란(실수로 한 번 이상 사용 가능하기 쉬움) 
-
-{% highlight javascript %}
-//참조 1에서 발췌한 코드
-(function (){
-    var score = Math.random() * 10;
-    console.log(score >= 5)
-})
-
-{% endhighlight %}
-
 
 <br/><br/>
 출처 : <br/>
