--- a/_posts/2020-06-06-js-5-dom.markdown
+++ b/_posts/2020-06-06-js-5-dom.markdown
@@ -58,7 +58,7 @@ document.querySelector('.dice').style.display = 'none';
 <br/>
 
 ## 2. Events 
-- events : 웹페이지에 무슨 일(예: 버튼 클릭됨, 키보드 키를 누름)이 일어났다고 코드에게 알려주는 것. 
+- events : 웹페이지에 무슨 일(예: 버튼 클릭됨, 키보드 키를 누름)이 일어났다고 코드에게 알려주는 것. 발생 시 event object의 프로퍼티로 저장됨.
 - event listener : 특정 event가 일어나길 기다렸다가 event가 일어나면 실행되는 function
 - Message Queue : js 엔진이 브라우저에서 일어나는 event를 저장해두는 곳. 
 - Message Queue에 저장된 event는 Function Execution Stack이 빈 이후에만 작동 (= 모든 function이 return했을 때만 작동)
@@ -84,3 +84,11 @@ document.querySelector('.btn-roll').addEventListener('click', function(){
 })
 
 {% endhighlight %}
+
+- event bubbling: 어떤 html요소에 이벤트가 일어나면 모든 부모 요소에도 차례대로 일어남. (root element인 html에 닿을 때까지)
+    + target element: 처음 이벤트가 발생한 요소, event object의 프로퍼티에 저장되는 요소. 
+    + 저장해뒀기 때문에 부모 요소는 target element가 무엇인지 알 수 있음.
+
+- event delegation (이벤트 위임): 부모 요소에 event handler를 적용해서 자식 요소의 event를 처리하는 방법.
+    + 여러 자식 요소를 다룰 때 사용
+    + 페이지를 로드할 시점에선 DOM에 존재하지 않는 요소를 다룰 때 사용. 
